--- a/网页制作/css/index.css
+++ b/网页制作/css/index.css
@@ -26,16 +26,16 @@ a {
     top: 0;
     right: 0;
     left: 0;
-    height: 60px;
+    height: 70px;
     z-index: 20;
-    background: #828282;
-    border-bottom: 1px #ffffff solid;
+    background: url(../img/bg1.jpg) ;
+    /* border-bottom: 1px #ffffff solid; */
     padding: 0 30px 0 0;
 }
 
 .fd-nav-right {
     float: right;
-    margin: 21px 25px 0 0;
+    margin: 24px 25px 0 0;
     color: #ffffff;
     font-weight: 900;
 }
@@ -45,6 +45,7 @@ a {
 }
 
 #nav-search {
+    margin-top: 4px;
     width: 250px;
     height: 30px;
 }
@@ -54,7 +55,7 @@ a {
     top: 1px;
     width: 50px;
     height: 30px;
-    background: #828282;
+    background: #333333;
     color: #ffffff;
     border: 2px solid #ffffff;
     border-radius: 25px;
@@ -149,7 +150,7 @@ a {
     cursor: pointer;
 }
 
-.iconfont {
+.fd-icon .iconfont {
     color: #828282;
     font-size: 75px;
     line-height: 154px;
@@ -451,3 +452,48 @@ a {
 #lastdiv a{
     color: #337ab7;
 }
+#body-right{
+    z-index: 30;
+    height: 200px;
+    position: fixed;
+    right: 0;
+    top: 50%;
+    margin-top: -100px;
+    margin-right: 10px;
+}
+.fd-body-right{
+    position: absolute;
+    right: 0;
+    width: 60px;
+    height: 60px;
+    margin:7px 0;
+    overflow: hidden;
+    text-align: center;
+    background: #E00012;
+    border: 1px none #E00012;
+    border-radius: 100%;
+}
+.fd-body-right:nth-child(2){
+    top: 67px;
+}
+.fd-body-right:nth-child(3){
+    top: 134px;
+}
+.fd-body-right:hover{
+    width: 180px;
+    border-radius: 30px;
+}
+.fd-body-left .iconfont{
+    float: left;
+    margin-left: 18px;
+    color: #ffffff;
+    line-height: 60px;
+    font-size: 25px;
+}
+.fd-hidden{
+    font-size: 14px;
+    line-height: 60px;
+    margin-left: 10px;
+}
+
+
