--- a/网页制作/css/index.css
+++ b/网页制作/css/index.css
@@ -105,17 +105,30 @@ a {
     background: url(../img/bg14.jpg) 100% 100%;
     left: 4147px;
 }
+.fd-wapper1:nth-child(5){
+    background: url(../img/bg1.jpg) 100% 100%;
+    left: 5496px;
+}
 .fd-wp-ul{
-    width: 400px;
-    height: 30px;
+    width: 250px;
+    height: 20px;
     margin: 0 auto;
     position: absolute;
     left: 50%;
     bottom: 30px;
-    margin-left: -200px;
+    margin-left: -125px;
+}
+.fd-wp-ul li{
+    float: left;
+    margin: 0 11px;
+    width: 40px;
+    height: 3px;
+    background: white;
+    cursor: pointer;
+}
+.fd-wp-ul .fd-selected{
     background: red;
 }
-.fd-
 
 .fd-bg1 {
     height: 200px;
